--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@huggingface/inference": "^4.13.5",
     "@supabase/supabase-js": "^2.90.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.0",
     "connect-pg-simple": "^9.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -44,6 +45,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "openai": "^6.16.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
