--- a/render.yaml
+++ b/render.yaml
@@ -17,3 +17,47 @@ databases:
   - name: ofa-db
     plan: free
 
+
+
+  - type: web
+    name: ofa-app
+    env: node
+    buildCommand: npm install && npm run build
+    startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: PORT
+        value: 3000
+    domains:
+      - wemanageall.in
+      - www.wemanageall.in
+
+databases:
+  - name: ofa-db
+    plan: free
+
+
+
+  - type: web
+    name: ofa-app
+    env: node
+    buildCommand: npm install && npm run build
+    startCommand: npm start
+    envVars:
+      - key: NODE_ENV
+        value: production
+      - key: PORT
+        value: 3000
+    domains:
+      - wemanageall.in
+      - www.wemanageall.in
+
+databases:
+  - name: ofa-db
+    plan: free
+
+
+
+
+
