--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "framer-motion": "^12.33.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "openai": "^6.16.0",
