--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.33.0",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.8",
     "openai": "^6.16.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
